--- a/cfu-data-types.ipynb
+++ b/cfu-data-types.ipynb
@@ -49,11 +49,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Albert, who is 26 and lives in Barcelona Casanova 238 has 919.0 dollars left from the salary after expenses. \n",
+      "Albert can live peacefully until the end of the month...\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "import random\n",
+    "\n",
+    "name = input(\"Enter your name:\")\n",
+    "adress = input(\"Enter your adress:\")\n",
+    "age = input(\"Enter your age:\")\n",
+    "salary = input(\"Enter your salary:\")\n",
+    "expenses = random.randint(100, 750)\n",
+    "\n",
+    "age = int(age)\n",
+    "salary = float(salary)\n",
+    "expenses = float(expenses)\n",
+    "\n",
+    "remaining_salary = salary - expenses\n",
+    "\n",
+    "sufficient_salary = remaining_salary >= 500\n",
+    "\n",
+    "print(f\"{name}, who is {age} and lives in {adress} has {remaining_salary} dollars left from the salary after expenses. \")\n",
+    "\n",
+    "if sufficient_salary:\n",
+    "    print(f\"{name} can live peacefully until the end of the month...\")\n",
+    "else: \n",
+    "    print(f\"{name} should start looking for a new job...\")\n",
+    "\n"
    ]
   },
   {
@@ -102,17 +133,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "297\n",
+      "This is the clean version of the poem:\n",
+      "some say the world will end in fire\n",
+      "some say in ice\n",
+      "from what i’ve tasted of desire\n",
+      "i hold with those who favor fire\n",
+      "but if it had to perish twice\n",
+      "i think i know enough of hate\n",
+      "to say that for destruction ice\n",
+      "is also great\n",
+      "and would suffice\n",
+      "python is awesome!\n",
+      "This is the poem words split:\n",
+      "['some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire', 'some', 'say', 'in', 'ice', 'from', 'what', 'i’ve', 'tasted', 'of', 'desire', 'i', 'hold', 'with', 'those', 'who', 'favor', 'fire', 'but', 'if', 'it', 'had', 'to', 'perish', 'twice', 'i', 'think', 'i', 'know', 'enough', 'of', 'hate', 'to', 'say', 'that', 'for', 'destruction', 'ice', 'is', 'also', 'great', 'and', 'would', 'suffice', 'python', 'is', 'awesome!']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "import string\n",
+    "\n",
+    "\n",
+    "poem = \"\"\"Some say the world will end in fire,\n",
+    "Some say in ice.\n",
+    "From what I’ve tasted of desire\n",
+    "I hold with those who favor fire.\n",
+    "But if it had to perish twice,\n",
+    "I think I know enough of hate\n",
+    "To say that for destruction ice\n",
+    "Is also great\n",
+    "And would suffice.\"\"\"\n",
+    "\n",
+    "poem_clean = poem.translate(str.maketrans('', '', string.punctuation)).lower()\n",
+    "\n",
+    "new_string = poem_clean + \" python is awesome!\"\n",
+    "\n",
+    "print(len(f\"This is the length of the new string: {new_string}\"))\n",
+    "\n",
+    "print(f\"This is the clean version of the poem:\\n{poem_clean}\\npython is awesome!\")\n",
+    "\n",
+    "print(\"This is the poem words split:\")\n",
+    "poem_list = new_string.split()\n",
+    "\n",
+    "print(poem_list)\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -126,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
